<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">203434436484262</string>
    <string name="logout_facebook">Thoát Facebook</string>
    <string name="text_title_facebook">Chia sẻ trên Facebook</string>
    <string name="share_facebook_confirm">Bạn có muốn chia sẻ bài hát này lên Facebook?</string>
    <string name="share_facebook_successfull_toast">Bạn đã chia sẻ bài hát này lên Facebook</string> 
    <string name="facebook_error_message_506">Bạn đã chia sẻ bài hát này!</string>
    <string name="facebook_error_logout">Bạn phải thoát Facebook App trước khi sử dụng chức năng này!</string>    
    <string name = "action_settings">action_settings</string>
     <string name="text_scroll_speed">Tốc độ cuộn:</string>
    <string name="text_search_result"><![CDATA[Có <b>%s</b> bài hát trong danh sách]]></string>
    <string name="txtChargeIt">Nạp tiền</string>
    <string name="lblImei">Số IMEI: </string>
    <string name="lblAccountId">Mã TK: </string>
    <string name="lblCardType">Loại thẻ: </string>
    <string name="lbl_PinNum">Số PIN: </string>
    <string name="lbl_Balance">Số dư: </string>
    <string name="txt_unknown">Không xác định</string>
    <string name="txt_account_your_info">Tài khoản của bạn</string>
    <string name="txt_card_info">Nạp thẻ</string>
    <string name="text_card_code">Mã thẻ cào</string>
    <string name="text_mobifone">MobiFone</string>
    <string name="text_vinaphone">VinaPhone</string>
    <string name="text_viettel">Viettel</string>
	<string name="text_tone_def">Chuẩn</string>
    <string name="text_copyright">Copyright \u00A9 HAT Group 2013</string>
    <string name="text_search">Tìm Kiếm</string>
    <string name="text_favorite">Yêu Thích</string>
    <string name="text_help">Trợ Giúp</string>
    <string name="text_search_desc">Tìm kiếm bài hát</string>
    <string name="text_favorite_desc">Bài hát yêu thích</string>
    <string name="text_help_desc">Hướng dẫn sử dụng</string>
    <string name="text_update">Cập Nhật</string>
    <string name="text_account">Tài Khoản</string>
    <string name="text_songs_purchase">Mua bài hát</string>
    <string name="text_update_desc">Cập nhật bài hát mới</string>
    <string name="text_account_desc">Tài khoản của tôi</string>
    <string name="text_song_purchase_desc">Mua bài hát mới</string>
    <string name="text_download_song">Download bài hát</string>
    <string name="text_download_song_desc">Download bài hát mới</string>
    <string name="text_music_run">Nghe Nhạc</string>
    <string name="text_music_note">Chuyển Tông</string>
    <string name="text_scroll">Cuộn</string>
    <string name="text_facebook">Chia Sẽ</string>
    <string name="text_comment">Góp Ý</string>
    <string name="text_content">Nội dung</string>
    <string name="text_subject">Chủ đề</string>
    <string name="text_rating">Đánh giá</string>
    <string name="text_activate">Kích Hoạt</string>
    <string name="text_cancel">Hủy bỏ</string>
    <string name="text_submit">Gửi</string>
    <string name="text_ok">Đồng ý</string>
    <string name="text_reset">Reset</string>
    <string name="text_title_comment">Góp ý về bài hát</string>
    <string name="text_title_tone_adjustment">Tăng/giảm tông</string>
    <string name="text_title_zoom">Phóng to</string>
    <string name="text_title_autoscroll">Tự động cuộn</string>
    <string name="text_delay">Dừng</string>
    <string name="text_second">giây</string>
    <string name="text_before_starting">trước khi cuộn</string>
    <string name="text_start">Bắt đầu</string>
    <string name="text_media_player">Media Player</string>
    <string name="text_title_progress">Vui lòng đợi&#8230;</string>
    <string name="text_connecting">Đang kết nối tới server&#x2026;</string>
    <string name="msg_error">Lỗi</string>
    <string name="msg_require_subject">Vui lòng nhập chủ đề.</string>
    <string name="msg_require_content">Vui lòng nhập nội dung.</string>
    <string name="msg_error_network">Kết nối bị lỗi. Vui lòng thử lại</string>
    <string name="msg_error_update">Cập nhật dữ liệu không thành công</string>
    <string name="msg_require_select_item">Vui lòng chọn bài hát.</string>
    <string name="msg_info_add_favorite_success">Bài hát đã được thêm vào danh sách yêu thích</string>
    <string name="msg_info_remove_favorite_success">Bài hát đã được xóa khỏi danh sách yêu thích</string>
    <string name="msg_info_deposit_success">Nạp tiền thành công.</string>
    <string name="msg_info_comment_success">Gửi góp ý thành công.</string>
    <string name="msg_warning_pin_blank">Số PIN không được bỏ trống</string>
    <string name="msg_warning_pin_card_type">Vui lòng chọn loại thẻ cào</string>
    
    <string name="app_name">VChord</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tab_navigation_content">Tabs can be useful for switching between a limited number of items. You can also collapse the main body of the action bar on small devices so that only the tab bar is displayed. See the source for more information.</string>
    <string name="tab_navigation">Tab Navigation</string>
    <string name="the_logo">LOGO</string>
    <string name="txt_search_hint">Từ khóa&#8230;</string>
    <string name="txt_song_name_hint">Nhập tên bài hát&#8230;</string>
    <string name="txt_singer_name_hint">Nhập tên ca sĩ&#8230;</string>
    <string name="txt_author_name_hint">Nhập tên tác giả&#8230;</string>
    <string name="btn_search_text">Tìm Kiếm</string>
    <string name="rhythm_prompt">Chọn nhịp</string>
    <string name="card_type_prompt">Chọn loại thẻ cào</string>
    <string name="melody_prompt">Chọn điệu</string>
    <string name="instructor_prompt">Chọn giảng viên</string>
    <string name="difficulty_prompt">Chọn độ khó</string>
    <string name="search_by_song">Bài hát</string>
    <string name="search_by_author">Tác giả</string>
    <string name="search_by_singer">Ca sĩ</string>
    <string name="song_name_label">Tên bài hát</string>
    <string name="instructor_label">Giảng viên</string>
    <string name="result_not_found">Không tìm thấy kết quả!</string>

   
    
    
    <string name="help_intro">Nhằm đáp ứng cho nhu cầu học nhạc ngày một đông đảo và để giúp cho người chơi Guitar có một công cụ hổ trợ hiệu quả trong việc hiển thị chính xác các hợp âm bài hát, xuất phát từ nhu cầu thực tiễn đó, sản phẩm <![CDATA[<b>Hợp Âm Guitar</b>]]> đã ra đời và khắc phục được những nhược điểm của các phần mềm tương tự. <![CDATA[<br/><br/>]]>Sản phẩm được phát hành gồm hai phiên bản: bản miễn phí hổ trợ đầy đủ những chức năng cơ bản nhất, bản thương mại được tích hợp thêm những tính năng nâng cao (tìm kiếm nâng cao, tự động cuộn nội dung bài hát theo các tốc độ phù hợp do người dùng định nghĩa…).<![CDATA[<br/><br/>]]>Chân thành cảm ơn các bạn đã chọn sản phẩm của chúng tôi.<![CDATA[<br/><br/>]]>Mọi ý kiến thắc mắc và đóng góp xin vui lòng liên hệ với chúng tôi: <![CDATA[<i>guitarinstructor@gmail.com</i>]]></string>
    <string name="help_user_guide">Đang đợi kịch bản</string>
    <string name="help_authors">Đinh Vũ Ngọc Triết (Sếp sòng)\nLê Đình Thiên An (GĐ thiết kế)\nPhan Trung Hiếu (GĐ kỹ thuật)</string>
    <string name="lbl_update_button">Cập Nhật</string>
    <string name="lbl_warning">Thông báo</string>
    <string name="lbl_feature_not_available">Xin lỗi! Chức năng này không sử dụng được cho bản miễn phí</string>
    <string name="lbl_please_wait">Vui lòng đợi&#8230;</string>
    <string name="lbl_downloading_data">Đang tải dữ liệu</string>
    <string name="mess_update_failed">Cập nhật dữ liệu thất bại</string>
    <string name="mess_update_success">Dữ liệu đã được cập nhật</string>
    <string name="lbl_song_last_update">Bài hát: </string>
    <string name="lbl_artist_last_update">Nghệ sỹ: </string>
    <string name="lbl_update_items">Thông tin:</string>
    <string name="lbl_last_update">Lần cập nhật cuối:</string>
    <string name="msg_zoom_in">Phóng to</string>
    <string name="msg_zoom_out">Thu nhỏ</string>
    <string name="msg_not_activated">Chức năng này chưa được kích hoạt</string>
    <string name="msg_activate_success">Đã kích hoạt thành công!</string>
    <string name="msg_activate_fail">Kích hoạt thất bại. Vui lòng kiểm tra số dư tài khoản</string>
</resources>